--- a/src/style.css
+++ b/src/style.css
@@ -4,75 +4,86 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+a {
+  color: #885df1;
+}
 h1 {
-  margin: 10px auto;
-  line-height: 40px;
+  font-size: 38px;
+  font-weight: 900;
+  margin: 0;
+}
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding-bottom: 30px;
+}
+main {
+  padding: 30px 0;
 }
 .container {
-  display: inline-block;
-  margin: 40px auto;
-  padding: 25px 35px;
-  border: 1px solid #f9f7fe;
-  position: relative;
-  left: 30%;
   background: #fff;
-  border-radius: 15px;
-  max-width: 950px;
+  border-radius: 10px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  margin: 60px auto;
+  max-width: 600px;
+  padding: 30px;
 }
 #search-input {
-  width: 350px;
-  line-height: 30px;
-  padding: 5px 15px;
   background: #f9f7fe;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  padding: 20px;
+  width: 75%;
 }
 #submit-button {
-  width: 90px;
-  line-height: 30px;
-  background: blueviolet;
-  color: #fff;
-  font-weight: bold;
-  padding: 5px 25px;
+  background-color: #885df1;
   border: none;
   border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  line-height: 1;
+  margin-left: 5px;
+  padding: 20px;
 }
 #description {
-  font-weight: 550;
-  font-size: 15px;
-  opacity: 0.4;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
 }
 #humidity {
-  color: red;
+  color: #f65282;
 }
 #wind {
-  color: red;
+  color: #f65282;
 }
 #emoji {
-  font-size: 35px;
-  position: relative;
-  top: -50px;
-}
-#current-temperature {
+  font-size: 40px;
+  margin-right: 10px;
   position: relative;
   top: -40px;
-  font-weight: bold;
-  font-size: 70px;
 }
-#degree {
+#current-temperature {
+  font-size: 80px;
+  font-weight: bold;
   position: relative;
   top: -65px;
-  font-size: 30px;
+}
+#degree {
+  font-size: 28px;
+  position: relative;
+  top: -100px;
 }
 #content {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
 }
-#contact {
-  position: relative;
-  font-size: 12px;
-  margin: 20px auto;
-  font-weight: bold;
-  opacity: 0.5;
+footer {
+  border-top: 1px solid #f9f7fe;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 13px;
+  opacity: 0.8;
+  padding-top: 15px;
+  text-align: center;
 }
